@@ -1,14 +1,15 @@
 package com.regnosys.rosetta.config.file;
 
-import jakarta.inject.Inject;
-import jakarta.inject.Provider;
+import javax.inject.Inject;
+import javax.inject.Provider;
 
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
-public class RosettaConfigurationFileProvider implements Provider<URL>, javax.inject.Provider<URL> {
+public class RosettaConfigurationFileProvider implements Provider<URL> {
     public static final String FILE_NAME = "rosetta-config.yml";
     private final String fileName;
     private final boolean loadFromClasspath;
@@ -41,7 +42,7 @@ public class RosettaConfigurationFileProvider implements Provider<URL>, javax.in
 
     private URL getUrlForFile() {
         try {
-            Path path = Path.of(fileName);
+            Path path = Paths.get(fileName);
             if (Files.exists(path) && Files.isRegularFile(path) && Files.isReadable(path)) {
                 return path.toUri().toURL();
             } else {
